# csvnorm

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  LOG.md  MANIFEST.in  Makefile  PRD.md  README.md  csv_normalizer_wrapper.py  markdown  mypy.ini  pyproject.toml  utf8_basic.csv
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  copilot-instructions.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  issue.md
.github/workflows/: deploy-pages.yml  gemini-cli.yml  gemini-issue-automated-triage.yml  gemini-issue-scheduled-triage.yml  gemini-pr-review.yml  publish-pypi.yml
docs/: COMMUNICATION.md  deployment.md  early-detection.md  evaluation-v1.2.0.md  evaluation-v1.2.13.md  evaluation.md  future-ideas.md
docs/adr/: 001-use-duckdb-for-csv-validation.md  002-fallback-delimiter-strategy.md  003-stdout-vs-file-output-modes.md  004-temp-file-lifecycle.md  README.md
docs/website/: general-technical-specs-static-astro-site.md
openspec/: project.md
openspec/changes/add-date-format-option/: proposal.md  tasks.md
openspec/changes/add-in-place-option/: proposal.md  tasks.md
openspec/changes/add-mojibake-repair-ftfy/: design.md  proposal.md  tasks.md
openspec/changes/add-remote-download-option/: proposal.md  tasks.md
openspec/changes/add-remote-url-support/: tasks.md
openspec/changes/improve-stdout-error-visibility/: tasks.md
openspec/changes/update-default-output-dir/: tasks.md
openspec/changes/update-keep-names-flag/: tasks.md
openspec/changes/update-remote-input-download/: tasks.md
openspec/specs/csv-input/: spec.md
openspec/specs/encoding-detection/: spec.md
script/: prepare.sh
src/csv_normalizer/: __init__.py  __main__.py  cli.py  core.py  encoding.py  utils.py  validation.py
src/csvnorm/: __init__.py  cli.py  core.py  ui.py  utils.py  validation.py
tasks/: todo.md
test/: IMPORTAZIONI animali vivi 2025 luglio-dicembre.csv  POSAS_2025_it_Comuni.csv  README.md  Trasporto Pubblico Locale Settore Pubblico Allargato - Indicatore 2000-2020 Trasferimenti Correnti su Entrate Correnti.csv  alberi_messina_mojibake.csv  latin1_semicolon.csv  metadata_skip_rows.csv  pipe_mixed_headers.csv  title_row_skip.csv  utf8_basic.csv  utf8_sig_bom.csv  windows1252_quotes.csv
tests/: __init__.py  test_cli.py  test_core_helpers.py  test_encoding.py  test_integration.py  test_utils.py  test_validation.py
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/src/pages/: index.astro
(+57 files in other folders)
